--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "openai": "^6.3.0",
     "socket.io": "^4.8.1",
     "uuid": "^9.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "ws": "^8.18.3"
   }
 }
