--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "vote",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/speech": "^7.2.1",
     "@radix-ui/react-select": "^2.2.6",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
@@ -21,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
     "firebase": "^11.5.0",
+    "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^10.3.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
