--- a/.env
+++ b/.env
@@ -29,3 +29,6 @@ LIVEKIT_API_SECRET=60pwEGKjwZ1qMCcjL3b9cZUfYCgMTfYTYoLEgfMWgmQB
 LIVEKIT_URL=wss://tua-ao58ej87.livekit.cloud
 TAVUS_REPLICA_ID=rf4703150052
 TAVUS_PERSONA_ID=p3bd083f79b8
+
+GOOGLE_STT_CREDENTIALS_PATH=./service.json
+GOOGLE_APPLICATION_CREDENTIALS=./service.json
