--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/speech": "^7.2.1",
+    "@google-cloud/translate": "^9.3.0",
     "@radix-ui/react-select": "^2.2.6",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
